   - Bugfix: Infinite loop when specifing a directory as configuration file
   - Feature: Allowing popup getting the keyboard focus without getting it
        automatically when shown (new option "popup/popup_accept_focus")
   - Feature: More popup options can be configured via the gui
   - Feature: More applet options can be configured via the gui

Version 2.2.7
 * Robert Sowada
   - Changed version to 2.2.7
	
Version 2.2.6		2007-04-09 18:37
 * Robert Sowada
   - Changed version to 2.2.6
   - Updated Swedish translation (thanks to Daniel Nylander)
   - Added Daniel Nylander to contributors
   - Backport of infinite loop bugfix (from gnubiff 2.3.0 CVS)
	
Version 2.2.5		2007-01-28 16:08
 * Robert Sowada
   - Changed version to 2.2.5
   - Fixed incompatibility in the about dialog (API change from gtk 2.8 to
        gtk 2.10?; this bug was reported by Sebastian Breier as #1621270)
   - Bugfix: Handling of the "delete-event" in the about dialog
   - Added Sebastian Breier to contributors
   - Bugfix: Determining initial image size (thanks to Felipe Csaszar for
        reporting this bug)
   - Added Felipe Csaszar to contributors
   - Changed years in the About dialog to 2007

Version 2.2.4		2006-12-10 19:47
 * Robert Sowada
   - Changed version to 2.2.4
   - Bugfix: Option "filter_global_last" was not available
   - Updated intltool (to version 0.35.0) and gettext (to version 0.15) files
   - Feature: Portuguese translation (thanks to Gunther Furtado)
   - Updated German translation
   - Added Gunther Furtago to contributors
	
Version 2.2.3		2006-10-15 18:46
 * Robert Sowada
   - Changed version to 2.2.3
   - Bugfix: Encrypting passwords that are longer than 16 characters (debian
        bug #378233; thanks to Julio Mendoza for reporting this bug)
   - Bugfix: Encrypting passwords that have a length of 16, 32, 48 etc.
   - Bugfix: Code fixes to avoid gcc warnings
   - Bugfix: Ignore SIGPIPE signal for using SSL properly